# storymint

./: .env.devnet  .env.localnet  .env.sample  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
anchor/: Anchor.toml  tsconfig.json
anchor/only-for-testing/: collection.json  localnet.json
anchor/programs/storymint/: Cargo.toml
anchor/programs/storymint/src/: constants.rs  errors.rs  lib.rs
anchor/programs/storymint/src/instructions/: burn.rs  initialize.rs  mint.rs  update.rs
anchor/tests/: consts.ts  storymint.spec.ts  utils.ts
backend/: .env.sample  Dockerfile  manage.py  proxy.py  pyproject.toml  tasks.py
backend/backend/: asgi.py  urls.py  wsgi.py
backend/backend/settings/: base.py  development.py  production.py  proxy.py
backend/storymint/: admin.py  apps.py  backends.py  constants.py  utils.py
backend/storymint/admin/: __init__.py  metadata.py  world.py
backend/storymint/generators/: __init__.py  star_chart.py
backend/storymint/migrations/: 0001_initial.py
backend/storymint/models/: __init__.py  base.py  characters.py  metadata.py  users.py  world.py
backend/storymint/serializers/: __init__.py  metadata.py
backend/storymint/signals/: __init__.py  metadata.py
backend/storymint/tests/: test_auth.py
backend/storymint/views/: __init__.py  auth.py  metadata.py
onchain/: .firebaserc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
onchain/anchor/: Anchor.toml
onchain/anchor/migrations/: deploy.ts
onchain/anchor/programs/basic/: Cargo.toml
onchain/anchor/programs/basic/src/: lib.rs
onchain/anchor/programs/locked_sol_pnft/: Cargo.toml
onchain/anchor/programs/locked_sol_pnft/src/: lib.rs
onchain/anchor/programs/storymint/: Cargo.toml
onchain/anchor/programs/storymint/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
onchain/anchor/programs/storymint/src/instructions/: burn.rs  initialize.rs  mint.rs  mod.rs  update.rs
onchain/anchor/tests/: basic.spec.ts  consts.ts  locked_sol_pnft.spec.ts  locked_sol_pnft.spec.tsz  storymint.spec.ts  utils.ts
onchain/clients/: generate-clients.ts
onchain/scripts/: initializeCollection.ts
onchain/src/: utils.ts
onchain/src/app/: app-routes.tsx  app.tsx
onchain/src/components/solana/: signInWithSolana.ts  solana-provider.tsx
onchain/src/components/storymint/: assetGrid.tsx  consts.ts  instructions.ts  storymint.tsx
onchain/src/components/ui/: explorer-link.tsx  ui-layout.tsx
scripts/: anchorTest.ts  generateClients.ts  initializeCollection.ts
src/app/: app-routes.tsx  app.tsx
src/components/solana/: solana-provider.tsx
src/components/storymint/: AssetGrid.tsx  Storymint.tsx  consts.ts  instructions.ts  umiModules.ts  utils.ts
src/components/ui/: explorer-link.tsx  ui-layout.tsx
src/types/: env.d.ts
